meetful-xxx-root-mode-fix

--- a/src/meetful/partials/layouts/scripts.html
+++ b/src/meetful/partials/layouts/scripts.html
@@ -12,11 +12,12 @@
     for (var x in window.i18n__data) {
         window.i18n[x] = window.i18n__data[x]['{{i18n_config.current}}'];
     }
-    
+
     /*navbar collapse on click*/
     $('.nav a').on('click', function() {
-        $('.btn-navbar').click(); //bootstrap 2.x
-        $('.navbar-toggle').click() //bootstrap 3.x by Richard
+        if ($(document).width() < 1200) {
+            //$('.navbar-toggle').click() //bootstrap 3.x by Richard
+        }
     });
 </script>
 
@@ -38,9 +39,9 @@
 <script type="text/javascript">
     /*global angular*/
     angular.element(function() {
-        
+
         window.$('#main-view').html('');
-        
+
         angular.bootstrap(document, ['app']);
     });
 </script>
