meetful-xxx-nav-flickering

--- a/src/meetful/partials/layouts/scripts.html
+++ b/src/meetful/partials/layouts/scripts.html
@@ -16,7 +16,7 @@
     /*navbar collapse on click*/
     $('.nav a').on('click', function() {
         if ($(document).width() < 1200) {
-            //$('.navbar-toggle').click() //bootstrap 3.x by Richard
+            $('.navbar-toggle').click() //bootstrap 3.x by Richard
         }
     });
 </script>
