--- a/src/meetful/partials/layouts/scripts.html
+++ b/src/meetful/partials/layouts/scripts.html
@@ -1,3 +1,14 @@
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-60303213-4', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
 {{#each CDN}}
 <script type="text/javascript" src="{{this}}"></script>
 {{/each}} {{> auto-reload}} {{>css-update-button}}
@@ -45,3 +56,6 @@
         angular.bootstrap(document, ['app']);
     });
 </script>
+
+
+
