--- a/src/meetful/css/header.css
+++ b/src/meetful/css/header.css
@@ -1,6 +1,5 @@
 .navbar-default {
     background-color: white;
-    /* outline: 1px solid black; */
     border: 0px;
     height: 150px;
 }
@@ -12,30 +11,37 @@
 .nav__logo {
     height: 135px;
     margin-top: -25px;
-    /* margin-left: -20px; */
 }
 
-.navbar-default .navbar-collapse,
-.navbar-default .navbar-form {
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
     border-color: white;
     z-index: 100;
     position: relative;
     background-color: white;
 }
 
-.navbar-default .navbar-nav>li>a {
-    color: #333;
-    font-family: 'Avenir-Medium';
+.navbar-default .navbar-nav > li > a {
+    color: rgb(51, 51, 51);
+    font-family: Avenir-Medium;
     font-weight: 600;
     font-size: 20px;
 }
 
+.navbar-default .navbar-nav > li > a.btn {
+    color: white;
+}
+
+.navbar-default .navbar-nav > li > a.btn:hover,
+.navbar-default .navbar-nav > li > a.btn:active:hover
+ {
+    color: rgb(255, 255, 255);
+    background-color: rgb(51, 51, 51);
+    border-color: rgb(51, 51, 51);
+}
 
 .navbar-collapse {
     padding-right: 0px;
-    
 }
-
 
 .brand-wrapper {
     display: table;
@@ -52,8 +58,21 @@
     width: 100%;
 }
 
+.alert-header {
+    padding: 0px;
+    margin: 0px;
+}
 
-/*toggle*/
+.panel-alert {
+    background-color: rgb(255, 255, 255);
+}
+
+.alert-header h2 {
+    margin-top: 0px;
+}
+
+.alert-header p {
+}
 
 .navbar-toggle {
     margin-top: 40px;
@@ -61,15 +80,13 @@
     border-radius: 0px;
 }
 
-
-/* Small Devices, Tablets */
-
 @media only screen and (min-width: 768px) {
+ 
     .navbar-nav {
         margin-top: 36px;
     }
 }
 
 .navbar {
-   margin-bottom: 20px;
+    margin-bottom: 20px;
 }
