meetful-xxx-suscribe-link-header-alert-panel

--- a/src/meetful/partials/layouts/header.html
+++ b/src/meetful/partials/layouts/header.html
@@ -69,7 +69,7 @@
                             <h2>Meetful esta llegando !</h2>
                             <p>
                                 No ves ningun evento o no puedes registrarte ? Todavia estamos arreglando unos detalles.
-                                <br>Si quieres participar no olvides <a href="/suscribite">suscribirte</a> y te mantendremos informado.
+                                <br>Si quieres participar no olvides <a href="/{{i18n 'ROUTE_SUBSCRIBE'}}">suscribirte</a> y te mantendremos informado.
                             </p>
                         </div>
                     </div>
