--- a/src/meetful/partials/layouts/header.html
+++ b/src/meetful/partials/layouts/header.html
@@ -63,7 +63,8 @@
     <div class="row">
         <div class="col-lg-12 col-xs-12">
             <div class="panel panel-alert">
-                <div class="row">
+                <div class="container">
+                    <div class="row">
                     <div class="col-xs-12">
                         <div class="alert alert-header">
                             <h2>Meetful esta llegando !</h2>
@@ -73,6 +74,7 @@
                             </p>
                         </div>
                     </div>
+                </div>
                 </div>
             </div>
         </div>
