--- a/src/meetful/css/header.css
+++ b/src/meetful/css/header.css
@@ -13,25 +13,27 @@
     margin-top: 15px;
 }
 
-.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+.navbar-default .navbar-collapse,
+.navbar-default .navbar-form {
     border-color: white;
     z-index: 100;
     position: relative;
     background-color: white;
 }
 
-.navbar-default .navbar-nav > li > a {
+.navbar-default .navbar-nav>li>a {
     color: rgb(51, 51, 51);
     font-family: Avenir-Medium;
     font-weight: 600;
     font-size: 20px;
 }
 
-.navbar-default .navbar-nav > li > a.btn {
+.navbar-default .navbar-nav>li>a.btn {
     color: white;
 }
 
-.navbar-default .navbar-nav > li > a.btn:hover, .navbar-default .navbar-nav > li > a.btn:active:hover {
+.navbar-default .navbar-nav>li>a.btn:hover,
+.navbar-default .navbar-nav>li>a.btn:active:hover {
     color: rgb(255, 255, 255);
     background-color: rgb(51, 51, 51);
     border-color: rgb(51, 51, 51);
@@ -69,8 +71,7 @@
     margin-top: 0px;
 }
 
-.alert-header p {
-}
+.alert-header p {}
 
 .navbar-toggle {
     margin-top: 40px;
@@ -79,15 +80,18 @@
 }
 
 @media only screen and (min-width: 768px) {
- 
     .navbar-nav {
         margin-top: 36px;
+    }
+    .navbar-nav>li {
+        float: left;
+        padding-left: 5px;
     }
 }
 
 @media only screen and (min-width: 1200px) {
- 
-    .navbar-default .navbar-collapse, .navbar-default .navbar-form {
+    .navbar-default .navbar-collapse,
+    .navbar-default .navbar-form {
         background-color: transparent;
     }
 }
