--- a/src/meetful/res/includes/get-in-touch.html
+++ b/src/meetful/res/includes/get-in-touch.html
@@ -3,13 +3,9 @@
         <div class="panel">
             <h2 ng-cloak ng-bind="i18n.NAV_GET_IN_TOUCH"></h2>
             <p>
-                Comparte tus opiniones y dudas con nuestro equipo.
+                Comparte tus opiniones y dudas en la pagina de <a href="https://www.facebook.com/Meetful-1244827518927425/" target="_blank">Facebook</a>.
             </p>
-            <p>
-                mae@meetful.org
-                <br>
-                javi@meetful.org
-            </p>
+        
             <div class="row">
                 <div class="col-sm-12">
                     <img class="content__logo" src="/images/logo.jpg">
