--- a/src/meetful/res/includes/bo-home.html
+++ b/src/meetful/res/includes/bo-home.html
@@ -18,6 +18,12 @@
                 <a ng-show="isAdmin()" href="/backoffice/email-templates" class="btn btn-primary">Events</a>
             </div>
             <div class="col-xs-6 col-md-2">
+                <a ng-show="isAdmin()" href="/backoffice/i18n/-1" class="btn btn-primary">i18n</a>
+            </div>
+            <div class="col-xs-6 col-md-2">
+                <a ng-show="isAdmin()" href="/backoffice/setup" class="btn btn-primary">Setup</a>
+            </div>
+            <div class="col-xs-6 col-md-2">
                 <a ng-show="isAdmin()" href="/backoffice/email-templates" class="btn btn-primary">Settings</a>
             </div>
             <div class="row">
