--- a/src/meetful/partials/layouts/css.html
+++ b/src/meetful/partials/layouts/css.html
@@ -1,8 +1,8 @@
 {{#each CSS}}
-<link rel="stylesheet" href="{{this}}" type="text/css" />
-{{/each}}
+<link rel="stylesheet" href="{{this}}" type="text/css" /> {{/each}}
 
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
-{{#printCSS}}{{/printCSS}}
+<link rel="stylesheet" href="/common/css/pretty-checkable.css" type="text/css" /> 
 
+{{#printCSS}}{{/printCSS}}
