--- a/src/meetful/partials/layouts/scripts.html
+++ b/src/meetful/partials/layouts/scripts.html
@@ -38,6 +38,9 @@
 <script type="text/javascript" src="{{this}}"></script>
 {{/each}}
 
+<script type="text/javascript" src="/vendor/vendor-angular-bw-paging-min.js"></script>
+<script src="/vendor/vendor.angular.pretty-checkable.js"></script>
+
 <!--BUNDLE_JS_1-->
 <script type="text/javascript" src="/vendor/angular-google-autocomplete.js"></script>
 <script type="text/javascript" src="/vendor/angular-cloudinary.js"></script>
