--- a/src/meetful/res/includes/bo-home.html
+++ b/src/meetful/res/includes/bo-home.html
@@ -21,6 +21,9 @@
                 <a ng-show="isAdmin()" href="/backoffice/i18n/-1" class="btn btn-primary">i18n</a>
             </div>
             <div class="col-xs-6 col-md-2">
+                <a ng-show="isAdmin()" href="/backoffice/pages/-1" class="btn btn-primary">Pages</a>
+            </div>
+            <div class="col-xs-6 col-md-2">
                 <a ng-show="isAdmin()" href="/backoffice/setup" class="btn btn-primary">Setup</a>
             </div>
             <div class="col-xs-6 col-md-2">
