--- a/src/meetful/partials/layouts/scripts.html
+++ b/src/meetful/partials/layouts/scripts.html
@@ -19,6 +19,7 @@
         isApp: '{{isApp}}' == 'true'
     };
     window.i18n = {};
+    window.i18n_config = JSON.parse('{{{json i18n_config}}}');
     window.i18n__data = JSON.parse('{{{json i18n}}}');
     for (var x in window.i18n__data) {
         window.i18n[x] = window.i18n__data[x]['{{i18n_config.current}}'];
@@ -40,6 +41,7 @@
 
 <script type="text/javascript" src="/vendor/vendor-angular-bw-paging-min.js"></script>
 <script src="/vendor/vendor.angular.pretty-checkable.js"></script>
+<script type="text/javascript" src="/vendor/ui-listview-directive.js"></script>
 
 <!--BUNDLE_JS_1-->
 <script type="text/javascript" src="/vendor/angular-google-autocomplete.js"></script>
