meetful-xxx-public-profile-view

--- a/src/meetful/res/includes/profile.html
+++ b/src/meetful/res/includes/profile.html
@@ -69,7 +69,7 @@
                             <!-- Button -->
                             <div class="form-group">
                                 <div class="col-sm-12">
-                                    <button id="save" ng-click="save()" name="save" class="btn btn-primary" ng-bind="i18n.TEXT_SAVE"></button>
+                                    <button id="save" ng-show="showSave()" ng-click="save()" name="save" class="btn btn-primary" ng-bind="i18n.TEXT_SAVE"></button>
 
 <!--
                                     <a id="admin" ng-show="showProjectManagerButton()" href="/project-manager" name="admin" class="btn btn-primary">Project manager</a>
