--- a/src/meetful/res/includes/bo-i18n.html
+++ b/src/meetful/res/includes/bo-i18n.html
@@ -16,7 +16,7 @@
             <h2>i18n Registries</h2>
             <i18n-listview></i18n-listview>
         </div>
-    </div>
+    </div>``
     <div class="col-lg-12 col-xs-12" ng-cloak ng-show="isDetailView()">
         <div class="panel">
             <h2>i18n item details</h2>
@@ -25,9 +25,9 @@
                     <input ng-readonly="false" class="form-control input-md" ng-model="data.code" placeholder="Code (required)">
                 </div>
             </div>
-            <div class="row">
+            <div class="row" ng-repeat="lang in languages">
                 <div class="col-sm-12 col-md-6">
-                    <textarea ng-readonly="false" class="form-control input-md" ng-model="data.content" placeholder="empty message..."></textarea>
+                    <textarea ng-readonly="false" class="form-control input-md" ng-model="data.content[lang]" placeholder="content for '{[{lang}]}' language."></textarea>
                 </div>
             </div>
             <div class="row">
@@ -38,8 +38,6 @@
             <div class="row">
                 <div class="col-sm-12">
                     <a ng-cloak ng-show="showSave()" ng-click="save()" class="btn btn-primary" ng-bind="i18n.TEXT_SAVE"></a>
-                     <a ng-cloak  ng-click="encode()" class="btn btn-primary" ng-bind="'Encode'"></a>
-                     <a ng-cloak  ng-click="decode()" class="btn btn-primary" ng-bind="'Decode'"></a>
                 </div>
             </div>
         </div>
