--- a/src/meetful/css/notify.css
+++ b/src/meetful/css/notify.css
@@ -4,27 +4,40 @@
     margin: 0px;
     background-color: transparent;
     height: 60px;
+    position: fixed;
+    width: 100%;
+    left: 0px;
+    bottom: 0px;
+    border: 0px;
+}
+
+
+.notify .alert-dismissable .close{
+    right: 10px!important;
 }
 
 .notify .alert {
-    height: 50px;
+    height: 60px;
     background-color: white;
-    margin-bottom: 10px;
+    margin: 0px;
+    padding: 0px;
+    border-radius: 0px;
 }
-
-
 
 .notify .alert.alert-warning span {
     color: goldenrod;
 }
+
 .notify .alert.alert-info span {
-    color: #31708f;
+    color: rgb(49, 112, 143);
 }
 
 .notify .alert span {
-    float: right;
-    font-family: 'Avenir-Medium';
+    float: left;
+    font-family: Avenir-Medium;
     font-size: 15px;
     font-weight: 900;
-    color: #38761D;
+    color: rgb(56, 118, 29);
+    line-height: 60px;
+    padding: 0px 10px;
 }
