--- a/src/ba/css/content.css
+++ b/src/ba/css/content.css
@@ -5,21 +5,22 @@
 .paragraph {
     font-size: 20px;
     background-color: white;
+    margin-top: 10px;
     padding: 20px 30px;
+    border-radius: 20px;
 }
 
 .paragraph-layout {
     font-size: 20px;
     background-color: white;
-    padding-left:30px;
-    padding-right:30px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 .big-centered-logo {
     width: 100px;
     filter: contrast(1.55);
-    margin-top: 40px;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
 }
 
 .centered-title {
@@ -32,8 +33,7 @@
     padding: 20px 0px 0px;
     font-size: 25px;
     font-weight: 900;
-    margin: 0px auto;
-    background-color: white;
+    margin: 0px auto 40px;
 }
 
 .left-subtitle {
@@ -50,7 +50,6 @@
 }
 
 @media only screen and (min-width: 320px) {
- 
     .centered-title {
     }
 
@@ -62,7 +61,6 @@
 }
 
 @media only screen and (min-width: 480px) {
- 
     .centered-title {
     }
 
@@ -74,7 +72,6 @@
 }
 
 @media only screen and (min-width: 768px) {
- 
     .centered-title {
     }
 
@@ -86,7 +83,6 @@
 }
 
 @media only screen and (min-width: 992px) {
- 
     .centered-title {
     }
 
@@ -98,7 +94,6 @@
 }
 
 @media only screen and (min-width: 1200px) {
- 
     .centered-title {
     }
 
