--- a/src/ba/css/homepage.css
+++ b/src/ba/css/homepage.css
@@ -1,9 +1,10 @@
 .home-menu {
     list-style: none;
-    margin: 0px auto;
-    padding: 40px 0px 20px;
-    max-width: 580px;
-    background: white;
+    margin: 20px auto;
+    padding: 30px 0px 20px;
+    max-width: 280px;
+    background: azure;
+    border-radius: 20px;
 }
 
 .home-menu__item {
@@ -26,7 +27,6 @@
 }
 
 @media only screen and (min-width: 320px) {
- 
     .home-menu {
     }
 
@@ -44,7 +44,6 @@
 }
 
 @media only screen and (min-width: 480px) {
- 
     .home-menu {
     }
 
@@ -62,7 +61,6 @@
 }
 
 @media only screen and (min-width: 768px) {
- 
     .home-menu {
     }
 
@@ -80,7 +78,6 @@
 }
 
 @media only screen and (min-width: 992px) {
- 
     .home-menu {
     }
 
@@ -98,7 +95,6 @@
 }
 
 @media only screen and (min-width: 1200px) {
- 
     .home-menu {
     }
 
