--- a/src/ba/partials/layout/footer.html
+++ b/src/ba/partials/layout/footer.html
@@ -2,7 +2,7 @@
     <div class="row">
        <div class="col-xs-12 col-md-6">
            <p class="footer__text">
-               join forces, write me to arancibiajav@gmail.com
+               arancibiajav@gmail.com
            </p>
        </div>
        <div class="col-xs-12 col-md-6">
