--- a/src/ba/partials/layout/header.html
+++ b/src/ba/partials/layout/header.html
@@ -1,16 +1,27 @@
-<header>
+<header class="visible-md-block visible-lg-block">
     <div class="container">
         <div class="row">
-            <div class="col-xs-3 col-lg-2">
-                <a href="/" class="header__brand">
-                    <img class="header__logo" src="/img/logo.white.jpg" /> <p class="">MisitioBA</p>
-                </a>
+            <div class="col-xs-3 col-lg-3">
+                <div class="header__col">
+                    <a href="/" class="header__brand">
+                        <img class="header__logo" src="/img/ba-logo-round.png" />
+                        <p class="">MisitioBA</p>
+                    </a>
+                </div>
             </div>
-            <div class="col-xs-9 col-lg-10">
+            <div class="col-xs-9 col-lg-9">
                 <p class="header__text">
-                    freelance software development with full stack javascript engineering
+                    freelance <span class="header__text__alternate">[javascript fullstack]</span> web development
                 </p>
             </div>
         </div>
+
     </div>
 </header>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <p class="header__quote">"Being out on the edge, with everything at risk, is where you learn and grow the most"<br>Jim Whittaker</p>
+        </div>
+    </div>
+</div>
