--- a/src/ba/partials/layout/header.html
+++ b/src/ba/partials/layout/header.html
@@ -11,7 +11,7 @@
             </div>
             <div class="col-xs-9 col-lg-9">
                 <p class="header__text">
-                    freelance <span class="header__text__alternate">[javascript fullstack]</span> web development
+                    freelance <span class="header__text__alternate">[ fullstack javascript ]</span> web development
                 </p>
             </div>
         </div>
