ba-xxx-diagnostical-summary-grammar

--- a/src/ba/partials/layout/top.html
+++ b/src/ba/partials/layout/top.html
@@ -14,9 +14,9 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
 
 
-    <!--VENDOR-CSS-->
+    <!--DISABLE_VENDOR-CSS-->
 
-    <!--/VENDOR-CSS-->
+    <!--/DISABLE_VENDOR-CSS-->
 
     {{#printCSS}}{{/printCSS}}
 
