ba-xxx-particle-effect

--- a/src/ba/css/homepage.css
+++ b/src/ba/css/homepage.css
@@ -5,6 +5,8 @@
     max-width: 280px;
     background: azure;
     border-radius: 20px;
+    position: relative;
+    z-index: 2;
 }
 
 .home-menu__item {
