--- a/src/ba/partials/layout/footer.html
+++ b/src/ba/partials/layout/footer.html
@@ -1,14 +1,17 @@
-<div class="container">
-    <div class="row">
-       <div class="col-xs-12 col-md-6">
-           <p class="footer__text">
-               arancibiajav@gmail.com
-           </p>
-       </div>
-       <div class="col-xs-12 col-md-6">
-           <p class="footer__text footer__text-right">
-               freelancing proudly since 2015
-           </p>
-       </div>
+{{>social-icons}}
+<div class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-md-6">
+                <p class="footer__text">
+                    arancibiajav@gmail.com
+                </p>
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <p class="footer__text footer__text-right">
+                    freelancing proudly since 2015
+                </p>
+            </div>
+        </div>
     </div>
 </div>
