--- a/src/client/ba/partials/layout/top.html
+++ b/src/client/ba/partials/layout/top.html
@@ -23,24 +23,24 @@
 
 
     <!-- Favicons Generated with favicon.il.ly-->
-    <link rel="icon" sizes="16x16 32x32 48x48 64x64" href="{{root}}img/favicon.ico" />
+    <link rel="icon" sizes="16x16 32x32 48x48 64x64" href="/img/favicon.ico" />
     <!--if IElink(rel='shortcut icon', href=self.root+'img/favicon.ico')
 -->
     <!-- Optional: Android & iPhone-->
-    <link rel="apple-touch-icon-precomposed" href="{{root}}img/favicon-152.png" />
+    <link rel="apple-touch-icon-precomposed" href="/img/favicon-152.png" />
     <!-- Optional: IE10 Tile.-->
     <meta name="msapplication-TileColor" content="#FFFFFF" />
     <meta name="msapplication-TileImage" content="favicon-144.png" />
     <!-- Optional: ipads, androids, iphones, ...-->
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{root}}img/favicon-152.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{root}}img/favicon-144.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="{{root}}img/favicon-120.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{root}}img/favicon-114.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{root}}img/favicon-72.png" />
-    <link rel="apple-touch-icon-precomposed" href="{{root}}img/favicon-57.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/img/favicon-152.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/img/favicon-144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/img/favicon-120.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/img/favicon-114.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/img/favicon-72.png" />
+    <link rel="apple-touch-icon-precomposed" href="/img/favicon-57.png" />
 
     <script type="text/javascript">
-        window.ROOT = "{{root}}";
+        window.ROOT = "/";
     </script>
 </head>
 
