--- a/src/client/ba/partials/layout/scripts.html
+++ b/src/client/ba/partials/layout/scripts.html
@@ -40,3 +40,6 @@
         console.log('callback - particles.js config loaded');
     });
 </script>
+
+
+<script type="text/javascript" src="/js/app.js"></script>
